fixed project-card-headings on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -306,8 +306,7 @@ a {
 }
 
 .project-heading {
-	width: max-content;
-	height: max-content;
+	align-self: flex-start;
 }
 
 .project img {
